--- a/Blog.UI/appsettings.json
+++ b/Blog.UI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-ALEX;Database=MyBlog;Trusted_Connection=True;"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
