Add upload images

--- a/Blog.UI/appsettings.json
+++ b/Blog.UI/appsettings.json
@@ -1,8 +1,10 @@
-{
+﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-ALEX;Database=MyBlog;Trusted_Connection=True;"
   },
-  
+  "Path": {
+    "Images": "wwwroot/content/blog"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
